# code_samples

./: .gitignore
cpp/graph_aeron_flatbuffers/cpp/: CMakeLists.txt
cpp/graph_aeron_flatbuffers/cpp/src/: main.cpp
cpp/test_graph/: CMakeLists.txt  conanfile.txt  readme.md
cpp/test_graph/src/: capnprotoEncode.h  fbeEncode.cpp  flatBuffersEncode.cpp  main.cpp  sbeEncode.cpp  sbeEncode.h  sbeppEncode.cpp  sbeppEncode.h
cpp/test_graph/src/adhocSerialization/: bookModel.cpp  bookModel.h
cpp/test_graph/src/proto/: deribit_multicast.fbe
cpp/test_graph/src/strongTypes/: typedId.h
rust/interop_reserializer/: Cargo.toml
rust/interop_reserializer/benches/: deserialization_benches.rs  helpers.rs  mod.rs  poc_benches.rs  serialization_benches.rs  serialize_tests.rs  serialize_vector_tests.rs
rust/interop_reserializer/julia_samples/: types_tests.jl
rust/interop_reserializer/src/: lexer.rs  lexer_types.rs  lib.rs  main.rs  parser_types.rs
rust/interop_reserializer/src/generator_rust/: generate_rust_struct.rs  mod.rs
rust/interop_reserializer/src/parser/: parser.rs  parser_abstract_type.rs  parser_const_alias.rs  parser_enum.rs  parser_factory.rs  parser_field.rs  parser_struct.rs  parser_variable_type.rs
rust/interop_reserializer/tests/: example.rs  full_julia_rust_tests.rs  generator_rust_struct_tests.rs  lexer_tests.rs  parser_abstract_type_tests.rs  parser_const_alias_tests.rs  parser_enum_tests.rs  parser_field_tests.rs  parser_struct_tests.rs  parser_tests.rs  parser_var_type_tests.rs
rust/types_gen/: Cargo.toml  readme.md
rust/types_gen/benches/: deserialization_benches.rs  mod.rs  poc_benches.rs  serialization_benches.rs
rust/types_gen/examples/julia/: buffered.jl  scratch.jl  serialize.jl
rust/types_gen/idl/: common.jl  graph_message.jl  graph_types.jl  tests.jl
rust/types_gen/src/: lib.rs  test_helpers.rs
rust/types_gen/src/askama/: common.rs  mod.rs  readme.md
rust/types_gen/src/common/: field_positions.rs  mod.rs  parser_types.rs  string_utils.rs
rust/types_gen/src/generator_rust/: generate_rust_struct.rs
rust/types_gen/src/lexer/: lexer.rs  lexer_types.rs  mod.rs
rust/types_gen/src/nom/: mod.rs  parser.rs  parser_env.rs  parser_impl.rs
rust/types_gen/src/parser/: mod.rs  parser.rs  parser_abstract_type.rs  parser_const_alias.rs  (+4 more)
rust/types_gen/templates/: cpp_template_struct.txt  julia_template_struct.txt  rs_template_struct.txt
rust/types_gen/tests/: full_julia_rust_tests.rs  generate_julia.rs  generator_rust_struct_tests.rs  lexer_tests.rs  parser_abstract_type_tests.rs  parser_const_alias_tests.rs  parser_enum_tests.rs  parser_field_tests.rs  parser_struct_tests.rs  parser_tests.rs  parser_var_type_tests.rs  serialize_tests.rs  serialize_vector_tests.rs  test_generate_julia.rs
(+119 files in other folders)
